--- a/idol_gallery/idol_detail/ranko.html
+++ b/idol_gallery/idol_detail/ranko.html
@@ -4958,46 +4958,46 @@ kg
             var show_premium = true;
         </script>
         <script type='text/javascript' src='../../js/createjs.min.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/2402601_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/2502602_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/2407301_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/2507302_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/2510802_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/2518802_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/2430101_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/2534702_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/2553402_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/2459701_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/2402601_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/2502602_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/2407301_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/2507302_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/2510802_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/2518802_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/2430101_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/2534702_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/2553402_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/2459701_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/98_sign_effect.js'></script>
         <script src="../../js/underscore-min.js"></script>
         <script src="../../js/backbone-min.js"></script>
         <script src="../../js/ilibrary.js" type="text/javascript"></script>
