--- a/mypage.html
+++ b/mypage.html
@@ -399,7 +399,7 @@
                         <div class="rare_cool" style="overflow:hidden;width:96px;height:117px;background-size:96px 117px;">
                             <div class="idol" style="background: url( image_sp/card/quest/ranko_42.pg ) -16px -16px no-repeat;background-size: 126px;margin:0;margin-left:3px;margin-top:3px;width:91px;height:111px;"></div>
                             <div class="name_plate_cool" style="-webkit-transform:skew(7deg,-7deg);position: absolute;left: 4px;bottom: 11px;width: 85px;background-size: 85px;height: 17px;">
-                                <div class="name_cool text_shadow_cool" style="font-size:10px;top:-4px;left:-8px;-webkit-backface-visibility: hidden;">란코</div>
+                                <div class="name_cool text_shadow_cool" style="font-size:10px;top:-4px;left:-8px;-webkit-backface-visibility: hidden;">아직임</div>
                             </div>
                         </div>
                     </a>
