--- a/idol_gallery/idol_detail/ranko.html
+++ b/idol_gallery/idol_detail/ranko.html
@@ -4637,7 +4637,7 @@ kg
                         "7": "",
                         "8": "",
                         "9": "",
-                        "10": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/mask_l/f3f87f1ea01adffba286106b365275a8.png",
+                        "10": "../../image_sp/card/mask_l/f3f87f1ea01adffba286106b365275a8.png",
                         "12": "",
                         "13": "",
                         "14": "",
@@ -4680,7 +4680,7 @@ kg
                         "7": "",
                         "8": "",
                         "9": "",
-                        "10": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/mask_l2/f3f87f1ea01adffba286106b365275a8.png",
+                        "10": "../../image_sp/card/mask_l2/f3f87f1ea01adffba286106b365275a8.png",
                         "12": "",
                         "13": "",
                         "14": "",
@@ -4713,12 +4713,12 @@ kg
                         "41": ""
                     },
                     "mask_l_p": {
-                        "10": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/mask_l_p/f3f87f1ea01adffba286106b365275a8.png",
-                        "11": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/mask_l_p/85fc0f386df052f15d27adcb09354ebc.png"
+                        "10": "../../image_sp/card/mask_l_p/f3f87f1ea01adffba286106b365275a8.png",
+                        "11": "../../image_sp/card/mask_l_p/85fc0f386df052f15d27adcb09354ebc.png"
                     },
                     "mask_l2_p": {
-                        "10": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/mask_l2_p/f3f87f1ea01adffba286106b365275a8.png",
-                        "11": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/mask_l2_p/85fc0f386df052f15d27adcb09354ebc.png"
+                        "10": "../../image_sp/card/mask_l2_p/f3f87f1ea01adffba286106b365275a8.png",
+                        "11": "../../image_sp/card/mask_l2_p/85fc0f386df052f15d27adcb09354ebc.png"
                     },
                     "xs": ["../../image_sp/card/xs/ranko_01.jpg", 
                            "../../image_sp/card/xs/ranko_02.jpg", 
