--- a/idol_gallery/idol_detail/ranko.html
+++ b/idol_gallery/idol_detail/ranko.html
@@ -4405,19 +4405,19 @@ kg
                             "pa": "../../image_sp/ui/mypage_new/bg/bg_idol_reality_4_pa.jpg"
                         },
                         "5": {
-                            "cu": "../../image_sp/ui/gallery/bg_sr_cute.jpg?v=20170222083842",
-                            "co": "../../image_sp/ui/gallery/bg_sr_cool.jpg?v=20170222083842",
-                            "pa": "../../image_sp/ui/gallery/bg_sr_passion.jpg?v=20170222083842",
-                            "tr": "../../image_sp/ui/gallery/bg_sr_trainer.jpg?v=20170222083842"
+                            "cu": "../../image_sp/ui/gallery/bg_sr_cute.jpg",
+                            "co": "../../image_sp/ui/gallery/bg_sr_cool.jpg",
+                            "pa": "../../image_sp/ui/gallery/bg_sr_passion.jpg",
+                            "tr": "../../image_sp/ui/gallery/bg_sr_trainer.jpg"
                         },
                         "6": {
-                            "cu": "../../image_sp/ui/gallery/bg_sr_cute.jpg?v=20170222083842",
-                            "co": "../../image_sp/ui/gallery/bg_sr_cool.jpg?v=20170222083842",
-                            "pa": "../../image_sp/ui/gallery/bg_sr_passion.jpg?v=20170222083842"
+                            "cu": "../../image_sp/ui/gallery/bg_sr_cute.jpg",
+                            "co": "../../image_sp/ui/gallery/bg_sr_cool.jpg",
+                            "pa": "../../image_sp/ui/gallery/bg_sr_passion.jpg"
                         }
                     },
-                    "l": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/b7999fc204ef28323b6b656f66d46c42.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/7b71466acb0f40616f8cf2fff65736e7.jpg", 
+                    "l": ["../../image_sp/card/l/ranko_01.jpg", 
+                          "../../image_sp/card/l/ranko_02.jpg", 
                           "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/c340069fa99350b0a29508ddf3392a44.jpg", 
                           "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/be29acd9c1b205a8c69f4fd5b8763b1d.jpg", 
                           "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/78ba6d819af44ef169d32cc6685541a1.jpg", 
@@ -4502,46 +4502,46 @@ kg
                     },
                     "l_nosign": ["", 
                                  "", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/c340069fa99350b0a29508ddf3392a44.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/be29acd9c1b205a8c69f4fd5b8763b1d.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/78ba6d819af44ef169d32cc6685541a1.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/d1052359816fb13ba2b87fc90abccf00.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/070ed187236849ff082bcab7fde5af4c.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/b68433f5242f9a792a023ec1ad6e53fd.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/5062961868cf70cc24fdb4fe6d319c14.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/a8e4b70fb957baaeb029f6e09fb0965c.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/f3f87f1ea01adffba286106b365275a8.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/85fc0f386df052f15d27adcb09354ebc.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/2843d6da5edda215be6641a742189bbd.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/2fc7aaa1afffe3a797b9f64b8fac0a1e.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/f8b9134d6146874bad5933a284a3d760.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/d712a295960479bc715630e80c819f69.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/9ed747defd1c6c795859a5170f375893.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/29805f362930be2c4ad6c790285184c0.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/a8966398cde53faf1eea3197d044fa09.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/0cf0c9dda3969d5e0849f82ef76e3316.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/3986012e2714597c8db0358919b7fcbf.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/46d53903234e41082a542084e262e4ba.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/fd87367a4c86b934f53471b7127afba7.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/6782836a094a5ce9e71cdbf4d658fa90.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/44f5225bbe4ef204a0840a870fb8604c.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/3b9d6ba1ef0523d273c0203b04eb9400.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/c96e33b66c7d171dee121d2438fac8f9.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/5f1dd0a32dcb32f9b8e3ea9aa58a1e40.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/f986c2312524eac7b1b34979f6622857.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/0dd49bd187f75d83e8438a5556128ea5.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/5426ce4a0ecdfb0d967a3b88f5de2d3f.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/77888b116140c6eb07648568dd1e46ed.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/f011bd8445519452f410cc4e6e2815b0.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/fc063b3c2b253ba99ce3d6da4c0e5e68.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/765f35d9d6072fdafa42b0cf1554748c.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/ee3322e7a1adb7f0db49701a838d52a6.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/f7b5779f0be2a34b849c1bd37ce584cc.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/256e11ecfb192eac944a831c4fd1f50a.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/71f79f980e6bc707da848f7339b1e1d7.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/dc220f86dda6406c9ddcf2860a1937ca.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/8afa06956e46fc726db74276c0082f64.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/423532cf09fa283a69791bd32251ae53.jpg"],
+                                 "../../image_sp/card/l/ranko_03.jpg", 
+                                 "../../image_sp/card/l/ranko_04.jpg", 
+                                 "../../image_sp/card/l/ranko_05.jpg", 
+                                 "../../image_sp/card/l/ranko_06.jpg", 
+                                 "../../image_sp/card/l/ranko_07.jpg", 
+                                 "../../image_sp/card/l/ranko_08.jpg", 
+                                 "../../image_sp/card/l/ranko_09.jpg", 
+                                 "../../image_sp/card/l/ranko_10.jpg", 
+                                 "../../image_sp/card/l/ranko_11.jpg", 
+                                 "../../image_sp/card/l/ranko_12.jpg", 
+                                 "../../image_sp/card/l/ranko_13.jpg", 
+                                 "../../image_sp/card/l/ranko_14.jpg", 
+                                 "../../image_sp/card/l/ranko_15.jpg", 
+                                 "../../image_sp/card/l/ranko_16.jpg", 
+                                 "../../image_sp/card/l/ranko_17.jpg", 
+                                 "../../image_sp/card/l/ranko_18.jpg", 
+                                 "../../image_sp/card/l/ranko_19.jpg", 
+                                 "../../image_sp/card/l/ranko_20.jpg", 
+                                 "../../image_sp/card/l/ranko_21.jpg", 
+                                 "../../image_sp/card/l/ranko_22.jpg", 
+                                 "../../image_sp/card/l/ranko_23.jpg", 
+                                 "../../image_sp/card/l/ranko_24.jpg", 
+                                 "../../image_sp/card/l/ranko_25.jpg", 
+                                 "../../image_sp/card/l/ranko_26.jpg", 
+                                 "../../image_sp/card/l/ranko_27.jpg", 
+                                 "../../image_sp/card/l/ranko_28.jpg", 
+                                 "../../image_sp/card/l/ranko_29.jpg", 
+                                 "../../image_sp/card/l/ranko_30.jpg", 
+                                 "../../image_sp/card/l/ranko_31.jpg", 
+                                 "../../image_sp/card/l/ranko_32.jpg", 
+                                 "../../image_sp/card/l/ranko_33.jpg", 
+                                 "../../image_sp/card/l/ranko_34.jpg", 
+                                 "../../image_sp/card/l/ranko_35.jpg", 
+                                 "../../image_sp/card/l/ranko_36.jpg", 
+                                 "../../image_sp/card/l/ranko_37.jpg", 
+                                 "../../image_sp/card/l/ranko_38.jpg", 
+                                 "../../image_sp/card/l/ranko_39.jpg", 
+                                 "../../image_sp/card/l/ranko_40.jpg", 
+                                 "../../image_sp/card/l/ranko_41.jpg", 
+                                 "../../image_sp/card/l/ranko_42.jpg"],
                     "l_nosign_p": {
                         "2": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/c340069fa99350b0a29508ddf3392a44.jpg",
                         "3": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/be29acd9c1b205a8c69f4fd5b8763b1d.jpg",
