--- a/idol_gallery/idol_detail/ranko.html
+++ b/idol_gallery/idol_detail/ranko.html
@@ -4586,46 +4586,46 @@ kg
                     },
                     "l_noframe": [null, 
                                   null, 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/c340069fa99350b0a29508ddf3392a44.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/be29acd9c1b205a8c69f4fd5b8763b1d.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/78ba6d819af44ef169d32cc6685541a1.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/d1052359816fb13ba2b87fc90abccf00.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/070ed187236849ff082bcab7fde5af4c.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/b68433f5242f9a792a023ec1ad6e53fd.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/5062961868cf70cc24fdb4fe6d319c14.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/a8e4b70fb957baaeb029f6e09fb0965c.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/f3f87f1ea01adffba286106b365275a8.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/85fc0f386df052f15d27adcb09354ebc.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/2843d6da5edda215be6641a742189bbd.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/2fc7aaa1afffe3a797b9f64b8fac0a1e.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/f8b9134d6146874bad5933a284a3d760.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/d712a295960479bc715630e80c819f69.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/9ed747defd1c6c795859a5170f375893.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/29805f362930be2c4ad6c790285184c0.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/a8966398cde53faf1eea3197d044fa09.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/0cf0c9dda3969d5e0849f82ef76e3316.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/3986012e2714597c8db0358919b7fcbf.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/46d53903234e41082a542084e262e4ba.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/fd87367a4c86b934f53471b7127afba7.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/6782836a094a5ce9e71cdbf4d658fa90.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/44f5225bbe4ef204a0840a870fb8604c.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/3b9d6ba1ef0523d273c0203b04eb9400.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/c96e33b66c7d171dee121d2438fac8f9.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/5f1dd0a32dcb32f9b8e3ea9aa58a1e40.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/f986c2312524eac7b1b34979f6622857.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/0dd49bd187f75d83e8438a5556128ea5.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/5426ce4a0ecdfb0d967a3b88f5de2d3f.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/77888b116140c6eb07648568dd1e46ed.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/f011bd8445519452f410cc4e6e2815b0.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/fc063b3c2b253ba99ce3d6da4c0e5e68.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/765f35d9d6072fdafa42b0cf1554748c.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/ee3322e7a1adb7f0db49701a838d52a6.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/f7b5779f0be2a34b849c1bd37ce584cc.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/256e11ecfb192eac944a831c4fd1f50a.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/71f79f980e6bc707da848f7339b1e1d7.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/dc220f86dda6406c9ddcf2860a1937ca.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/8afa06956e46fc726db74276c0082f64.jpg", 
-                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/423532cf09fa283a69791bd32251ae53.jpg"],
+                                  "../../image_sp/card/l_noframe/ranko_03.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_04.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_05.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_06.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_07.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_08.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_09.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_10.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_11.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_12.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_13.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_14.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_15.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_16.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_17.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_18.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_19.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_20.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_21.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_22.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_23.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_24.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_25.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_26.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_27.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_28.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_29.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_30.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_31.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_32.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_33.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_34.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_35.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_36.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_37.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_38.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_39.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_40.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_41.jpg", 
+                                  "../../image_sp/card/l_noframe/ranko_42.jpg"],
                     "mask_l": {
                         "0": "",
                         "1": "",
