--- a/idol_gallery/idol_detail/ranko.html
+++ b/idol_gallery/idol_detail/ranko.html
@@ -4543,46 +4543,46 @@ kg
                                  "../../image_sp/card/l/ranko_41.jpg", 
                                  "../../image_sp/card/l/ranko_42.jpg"],
                     "l_nosign_p": {
-                        "2": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/c340069fa99350b0a29508ddf3392a44.jpg",
-                        "3": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/be29acd9c1b205a8c69f4fd5b8763b1d.jpg",
-                        "4": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/78ba6d819af44ef169d32cc6685541a1.jpg",
-                        "5": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/d1052359816fb13ba2b87fc90abccf00.jpg",
-                        "6": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/070ed187236849ff082bcab7fde5af4c.jpg",
-                        "7": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/b68433f5242f9a792a023ec1ad6e53fd.jpg",
-                        "8": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/5062961868cf70cc24fdb4fe6d319c14.jpg",
-                        "9": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/a8e4b70fb957baaeb029f6e09fb0965c.jpg",
-                        "10": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/f3f87f1ea01adffba286106b365275a8.jpg",
-                        "11": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/85fc0f386df052f15d27adcb09354ebc.jpg",
-                        "12": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/2843d6da5edda215be6641a742189bbd.jpg",
-                        "13": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/2fc7aaa1afffe3a797b9f64b8fac0a1e.jpg",
-                        "14": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/f8b9134d6146874bad5933a284a3d760.jpg",
-                        "15": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/d712a295960479bc715630e80c819f69.jpg",
-                        "16": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/9ed747defd1c6c795859a5170f375893.jpg",
-                        "17": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/29805f362930be2c4ad6c790285184c0.jpg",
-                        "18": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/a8966398cde53faf1eea3197d044fa09.jpg",
-                        "19": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/0cf0c9dda3969d5e0849f82ef76e3316.jpg",
-                        "20": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/3986012e2714597c8db0358919b7fcbf.jpg",
-                        "21": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/46d53903234e41082a542084e262e4ba.jpg",
-                        "22": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/fd87367a4c86b934f53471b7127afba7.jpg",
-                        "23": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/6782836a094a5ce9e71cdbf4d658fa90.jpg",
-                        "24": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/44f5225bbe4ef204a0840a870fb8604c.jpg",
-                        "25": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/3b9d6ba1ef0523d273c0203b04eb9400.jpg",
-                        "26": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/c96e33b66c7d171dee121d2438fac8f9.jpg",
-                        "27": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/5f1dd0a32dcb32f9b8e3ea9aa58a1e40.jpg",
-                        "28": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/f986c2312524eac7b1b34979f6622857.jpg",
-                        "29": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/0dd49bd187f75d83e8438a5556128ea5.jpg",
-                        "30": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/5426ce4a0ecdfb0d967a3b88f5de2d3f.jpg",
-                        "31": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/77888b116140c6eb07648568dd1e46ed.jpg",
-                        "32": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/f011bd8445519452f410cc4e6e2815b0.jpg",
-                        "33": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/fc063b3c2b253ba99ce3d6da4c0e5e68.jpg",
-                        "34": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/765f35d9d6072fdafa42b0cf1554748c.jpg",
-                        "35": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/ee3322e7a1adb7f0db49701a838d52a6.jpg",
-                        "36": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/f7b5779f0be2a34b849c1bd37ce584cc.jpg",
-                        "37": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/256e11ecfb192eac944a831c4fd1f50a.jpg",
-                        "38": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/71f79f980e6bc707da848f7339b1e1d7.jpg",
-                        "39": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/dc220f86dda6406c9ddcf2860a1937ca.jpg",
-                        "40": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/8afa06956e46fc726db74276c0082f64.jpg",
-                        "41": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/423532cf09fa283a69791bd32251ae53.jpg"
+                        "2": "../../image_sp/card_sign_no_p/l/ranko_03.jpg",
+                        "3": "../../image_sp/card_sign_no_p/l/ranko_04.jpg",
+                        "4": "../../image_sp/card_sign_no_p/l/ranko_05.jpg",
+                        "5": "../../image_sp/card_sign_no_p/l/ranko_06.jpg",
+                        "6": "../../image_sp/card_sign_no_p/l/ranko_07.jpg",
+                        "7": "../../image_sp/card_sign_no_p/l/ranko_08.jpg",
+                        "8": "../../image_sp/card_sign_no_p/l/ranko_09.jpg",
+                        "9": "../../image_sp/card_sign_no_p/l/ranko_10.jpg",
+                        "10": "../../image_sp/card_sign_no_p/l/ranko_11.jpg",
+                        "11": "../../image_sp/card_sign_no_p/l/ranko_12.jpg",
+                        "12": "../../image_sp/card_sign_no_p/l/ranko_13.jpg",
+                        "13": "../../image_sp/card_sign_no_p/l/ranko_14.jpg",
+                        "14": "../../image_sp/card_sign_no_p/l/ranko_15.jpg",
+                        "15": "../../image_sp/card_sign_no_p/l/ranko_16.jpg",
+                        "16": "../../image_sp/card_sign_no_p/l/ranko_17.jpg",
+                        "17": "../../image_sp/card_sign_no_p/l/ranko_18.jpg",
+                        "18": "../../image_sp/card_sign_no_p/l/ranko_19.jpg",
+                        "19": "../../image_sp/card_sign_no_p/l/ranko_20.jpg",
+                        "20": "../../image_sp/card_sign_no_p/l/ranko_21.jpg",
+                        "21": "../../image_sp/card_sign_no_p/l/ranko_22.jpg",
+                        "22": "../../image_sp/card_sign_no_p/l/ranko_23.jpg",
+                        "23": "../../image_sp/card_sign_no_p/l/ranko_24.jpg",
+                        "24": "../../image_sp/card_sign_no_p/l/ranko_25.jpg",
+                        "25": "../../image_sp/card_sign_no_p/l/ranko_26.jpg",
+                        "26": "../../image_sp/card_sign_no_p/l/ranko_27.jpg",
+                        "27": "../../image_sp/card_sign_no_p/l/ranko_28.jpg",
+                        "28": "../../image_sp/card_sign_no_p/l/ranko_29.jpg",
+                        "29": "../../image_sp/card_sign_no_p/l/ranko_30.jpg",
+                        "30": "../../image_sp/card_sign_no_p/l/ranko_31.jpg",
+                        "31": "../../image_sp/card_sign_no_p/l/ranko_32.jpg",
+                        "32": "../../image_sp/card_sign_no_p/l/ranko_33.jpg",
+                        "33": "../../image_sp/card_sign_no_p/l/ranko_34.jpg",
+                        "34": "../../image_sp/card_sign_no_p/l/ranko_35.jpg",
+                        "35": "../../image_sp/card_sign_no_p/l/ranko_36.jpg",
+                        "36": "../../image_sp/card_sign_no_p/l/ranko_37.jpg",
+                        "37": "../../image_sp/card_sign_no_p/l/ranko_38.jpg",
+                        "38": "../../image_sp/card_sign_no_p/l/ranko_39.jpg",
+                        "39": "../../image_sp/card_sign_no_p/l/ranko_40.jpg",
+                        "40": "../../image_sp/card_sign_no_p/l/ranko_41.jpg",
+                        "41": "../../image_sp/card_sign_no_p/l/ranko_42.jpg"
                     },
                     "l_noframe": [null, 
                                   null, 
